mm-iface-modem-3gpp: fix packet service state updation

Modem could be in 'registered' state if CS is 'attached',
but packet service state might be 'detached'.

Check if packet service state needs to be updated in
update_registration_state(), even if registration state is same.

Fixes: https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/618